# ChangeLog for net-im/kadu-sound
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*kadu-sound-3.0_alpha1 (23 Feb 2015)

  23 Feb 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-3.0_alpha1.ebuild:
  Bumped.

*kadu-sound-2.0 (21 Feb 2015)

  21 Feb 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-2.0.ebuild:
  Bumped.

*kadu-sound-2.0_rc3 (14 Feb 2015)

  14 Feb 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-2.0_rc3.ebuild:
  Bumped.

*kadu-sound-2.0_rc2 (07 Feb 2015)

  07 Feb 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-2.0_rc2.ebuild:
  Bumped.

*kadu-sound-2.0_rc1 (01 Feb 2015)

  01 Feb 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-2.0_rc1.ebuild:
  Bumped.

  26 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> kadu-sound-2.0_beta1.ebuild:
  It seems 2.0_beta1 introduced a qtmultimedia dep.

*kadu-sound-2.0_beta1 (24 Jan 2015)

  24 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-2.0_beta1.ebuild:
  Bumped.

*kadu-sound-1.5 (19 Jan 2015)

  19 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-1.5.ebuild:
  Bumped.

*kadu-sound-2.0_alpha2 (11 Jan 2015)

  11 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-2.0_alpha2.ebuild:
  Bumped.

*kadu-sound-2.0_alpha1 (04 Jan 2015)

  04 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-2.0_alpha1.ebuild:
  Bumped.

*kadu-sound-1.4 (02 Jan 2015)

  02 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-1.4.ebuild:
  Bumped.

*kadu-sound-1.3 (13 Dec 2014)

  13 Dec 2014; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-1.3.ebuild:
  Bumped.

*kadu-sound-1.2 (07 Nov 2014)

  07 Nov 2014; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-1.2.ebuild:
  Bumped.

*kadu-sound-1.1 (18 Oct 2014)

  18 Oct 2014; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-1.1.ebuild:
  Bumped.

  01 Oct 2014; Michał Ziąbkowski <mziab@o2.pl> -kadu-sound-1.0_alpha2.ebuild,
  -kadu-sound-1.0_alpha3.ebuild, -kadu-sound-1.0_alpha4.ebuild,
  -kadu-sound-1.0_alpha5.ebuild, -kadu-sound-1.0_rc1.ebuild,