@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kadu-sound-3.0_alpha1-r1 (27 Feb 2015)
+
+  27 Feb 2015; Michał Ziąbkowski <mziab@o2.pl>
+  +kadu-sound-3.0_alpha1-r1.ebuild:
+  Force -std=c++11 to fix build.
+
 *kadu-sound-3.0_alpha1 (23 Feb 2015)
 
   23 Feb 2015; Michał Ziąbkowski <mziab@o2.pl> +kadu-sound-3.0_alpha1.ebuild:
